Yoko: review css & create js

--- a/css/style.css
+++ b/css/style.css
@@ -292,4 +292,13 @@ footer {
     font-weight: bold;
     color: red; }
 
+/*=========*/
+.bg-gradient {
+  background: linear-gradient(to right, green, blue); }
+
+.text-gradient {
+  background: url("...") no-repeat center center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
+
 /*# sourceMappingURL=style.css.map */
