--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,6 @@ footer {
   text-align: center; }
   footer span {
     font-weight: bold;
-    color: red; }
+    color: blue; }
 
 /*# sourceMappingURL=style.css.map */
