--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-/*=======COMMON SETTING===========*/
+/*===============COMMON SETTING===============*/
 *{
 	box-sizing: border-box;
 }
@@ -9,54 +9,19 @@ body{
 a{
 	text-decoration: none;
 }
-%cl-grey{
-	color: #cad0e2;
-}
-%cl-black{
-	color: #5e6372;
-}
 %cl-white{
 	color: #ffffff;
 }
-%bgcl-grey{
+%cl-grey{
+	color: #5e6372;
+}
+%bgcl{
 	background-color: #f6f6f6;
 }
-%bgcl-blue{
-	background-color: #4964a9;
-}
-
 @mixin border_radius($value){
 	border-radius: $value;
 	-webkit-border-radius: $value;
 	-moz-border-radius: $value;
-}
-%ask-price{
-	@extend %bgcl-blue;
-	@extend %cl-white;
-	@include border_radius(20px);
-	padding: 7px 20px;
-	font-size: 13px;
-}
-%btn-play{
-	position: absolute;
-	top: 45%;
-	left: 45%;
-	background-color: transparent;
-	border: 1px solid #e4e7f0;
-	padding: 7px 10px;
-	color: #e4e7f0;
-	@include border_radius(50%);
-	-webkit-box-shadow: 0px 0px 46px 5px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 46px 5px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 46px 5px rgba(0,0,0,0.75);
-}
-%text-gradient{
-	font-weight: bold;
-	background: url(../imgs/bggradient.png)  center center no-repeat;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-moz-background-clip: text;
-	-moz-text-fill-color: transparent;
 }
 .clearfix::after, .clearfix::before{
 	content: "";
@@ -65,529 +30,358 @@ a{
 .clearfix::after{
 	clear: both;
 }
-.container{
-	width: 80%;
-	margin: 0 auto;
+.show{
+	display: block !important;
 }
-.row{
-	padding: 20px 0;
+%gradient {
+	background: linear-gradient(to right, #c3002a, #e06900);
 }
-
-/*=======HEADER===========*/
+img{
+	border: 0;
+}
+@mixin img_res(){
+	img{
+		width: 100%;
+		height: auto;
+	}
+}
+@mixin column_gap($cols,$gap){
+	column-count: $cols;
+	-webkit-column-count: $cols;
+	-moz-column-count: $cols;
+	column-gap: $gap;
+	-webkit-column-gap: $gap;
+	-moz-column-gap: $gap;
+}
+@mixin text_trans(){
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-background-clip: text;
+	-moz-text-fill-color: transparent;
+}
+/*===============HEADER===============*/
 header{
-	background: linear-gradient(to right, #d11e25 , #e06900);
-	.top{
-		padding: 40px 0;
-		.logo{
-			font-size: 2em;
-			font-weight: 100;
+	@extend %gradient;
+	position: relative;
+	display: block;
+	width: 100%;
+	padding: 20px 0;
+	transition: all 1s;
+	.menu{
+		width: 80%;
+		position: relative;
+		left: 10%; right: 10%;
+		&__logo{
 			float: left;
 			@extend %cl-white;
-			.bold{
-				font-weight: bold;
-			}
-		}
-		nav{
+			font-size: 30px;
+		}	
+		&__items{
 			float: right;
-			ul{
-				margin: 0; padding: 0;
-				li{
-					list-style: none;
-					float: left;
-					a{
-						font-size: 12px;
-						@extend %cl-white;
-						margin: 0 5px;
-						line-height: 250%;
-						padding: 7px 15px;
-						border: 1px solid transparent;
-					}
-					a:hover{
-						border: 1px solid #ffffff;
-						@include border_radius(10px);
-					}
-				}
-			}
-		}
-	}
-	.banner{
-		position: relative;
-		.items{
-			position: relative;
-			img{
-				width: 100%;
-				height: auto;
-				opacity: 0.3;
-			}
-			&__info{
-				width: 50%;
-				position: absolute;
-				top: 20%;
-				left: 27%;
-				text-align: center;
-				&_heading{
-					@extend %cl-white;
-					font-size: 2em;
-				}
-				&_desc{
-					@extend %cl-white;
-					opacity: 0.5;
-					font-size: 13px;
-					font-weight: 200;
-					line-height: 150%;
-					margin-bottom: 40px;
-				}
-				a{
-
-					font-size: 12px;
-					color: #d32721;
-					padding: 7px 15px;
-					background-color: #ffffff;
-					@include border_radius(20px);
-					border: 1px solid #ffffff;
-				}
-				a:hover{
-					background-color: transparent;
-					@extend %cl-white;
-				}
-			}
-		}
-		.control{
-			@extend %cl-white;
-			position: absolute;
-			top: 80%;
-			left: 50%;
-			opacity: 0.8;
-			text-align: center;
-		}
-	}
-}
-
-/*=======SERVICES===========*/
-.services{
-	padding: 40px 0;
-	@extend %bgcl-grey;
-	&__item{
-		width: percentage(1/4);
-		padding: 20px 10px;
-		text-align: center;
-		float: left;
-		img{
-			width: 97px;
-			height: 98px;
-			object-fit: contain;
-		}
-		h3{
-			background: linear-gradient(to right,#d11e25 , #e06900);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-		}
-		p{
-			font-size: 13px;
-			line-height: 150%;
-			@extend %cl-grey;
-		}
-	}
-	.ask-price{
-		text-align: center;
-		a{
-			@extend %bgcl-blue;
-			@extend %cl-white;
-			@include border_radius(20px);
-			padding: 7px 20px;
-			font-size: 13px;
-		}
-	}
-}
-
-/*=======PRODUCT===========*/
-.products{
-	padding: 40px 0;
-	&__info{
-		float: left;
-		width: 60%;
-		padding-left: 150px;
-		h1{
-			span{
-				@extend %text-gradient;
-			}
-		}
-		p{
-			line-height: 200%;
-			font-size: 13px;
-		}
-		&_list{
-			&_left{
-				width: 60%;
-				float: left;
-				padding-right: 10px;
-				.item{
-					margin-bottom: 20px;
-					min-height: 50px;
-					.bullet{
-						float: left;
-						padding: 5px 10px;
-						border: 1px solid #cad0e2;
-						@include border_radius(50%); 
-						margin-right: 10px;
-					}
-					p{@extend %cl-grey;
-						
-						font-size: 10px;
-						line-height: 150%;
-					}
-				}
-			}
-			&_right{
-				width: 40%;
-				float: right;
-				padding-left: 10px;
-				.item{
-					margin-bottom: 20px;
-					min-height: 50px;
-					.bullet{
-						float: left;
-						padding: 5px 10px;
-						border: 1px solid #cad0e2;
-						@include border_radius(50%); 
-						margin-right: 10px;
-					}
-					p{
-						@extend %cl-grey;						
-						font-size: 10px;
-						line-height: 150%;
-					}
-				}
-			}
-		}
-	}
-	&__photo{
-		float: right;
-		width: 40%;
-		img{
-			width: 100%;
-			height: auto;
-		}
-	}
-}
-
-/*=======INFO===========*/
-.infos{
-	@extend %bgcl-grey;
-	&__left{
-		position: relative;
-		width: 50%;
-		float: left;
-		img{
-			width: 100%;
-			height: auto;
-			display: block;
-		}
-		button{
-			@extend %btn-play;
-		}
-		&_intro{
-			padding: 150px 100px 0 50px;
-			h1{
-				span{
-					@extend %text-gradient;
-				}
-			}
-			p{
-				@extend %cl-grey;
-				font-size: 12px;
-				line-height: 200%;
-			}
+			transition: all 0.5s;
 			a{
-				@extend %ask-price;
-			}
-		}
-	}
-	&__right{
-		width: 50%;
-		float: right;
-		&_intro{
-			padding: 150px 100px 0 50px;
-			h1{
-				span{
-					@extend %text-gradient;
-				}
-			}
-			p{
-				@extend %cl-grey;
-				font-size: 12px;
-				line-height: 200%;
-			}
-			a{
-				@extend %ask-price;
-			}
-		}
-		position: relative;
-		img{
-			width: 100%;
-			height: auto;
-			display: block;
-		}
-		button{
-			@extend %btn-play;
-		}
-	}
-}
-
-/*=======SIGNUP===========*/
-.signup{
-	.content{
-		position: relative;
-		background: linear-gradient(to right,#d11e25 , #e06900);
-		img{
-			width: 100%;
-			height: auto;
-			display: block;
-			opacity: 0.2;
-		}
-		form{
-			position: absolute;
-			top: 30%;
-			left: 40%;
-			text-align: center;
-			p{
+				display: inline-block;
 				@extend %cl-white;
-				font-size: 2em;
-			}
-			input{
-				padding: 7px 15px;
-				
+				margin: 0 10px;
+				padding: 5px 15px;
+				border: 1px solid transparent;
 				@include border_radius(20px);
+				font-size: 13px;
+				line-height: 200%;
 			}
-			input[type="text"]{
-				background: rgba(255, 255, 255, 0.2);
-				color: #ffffff;
-				border: 0;
-			}
-			input[type="text"]::-webkit-input-placeholder{
-				background-color: transparent;
-				color: #ffffff;
-			}
-			input[type="text"]:focus{
-				outline: none;
-			}
-			input[type="submit"]{
-				background-color: #ffffff;
-				color: #c9201a;
-				padding: 7px 35px;
-				margin-left: -50px;
+			a:hover{
 				border: 1px solid #ffffff;
 			}
 		}
 	}
-	
+	.menuBar{
+		display: none;
+		float: right;
+		.bar1, .bar2, .bar3{
+			width: 20px;
+			height: 3px;
+			background-color: #ffffff;
+			margin: 2px 0;
+			transition: all 0.5s;
+		}
+	}
+	.change .bar1{
+		transform: rotate(45deg) translate(5px, 8px);
+	}
+	.change .bar2{
+		opacity: 0;
+	}
+	.change .bar3{
+		transform: rotate(-45deg) translate(-1px, -2px);
+	}
 }
 
-/*=======MAP===========*/
-.map{
-	img{
+/*===============BANNER===============*/
+.banner{
+	@extend %gradient;
+	position: relative;
+	width: 100%;
+	display: block;
+	&__item{
+		position: relative;
+		@include img_res;
+		img{
+			opacity: 0.5;
+		}
+		&_info{
+			width: 40%;
+			position: absolute;
+			top: 30%;
+			left: 30%;
+			right: 30%;
+			text-align: center;
+			&_title{
+				@extend %cl-white;
+				font-size: 2em;
+				font-weight: bold;
+			}
+			&_desc{
+				@extend %cl-white;
+				line-height: 200%;
+				margin-bottom: 50px;
+				font-size: 14px;
+			}
+			&_button{
+				color: #d32721;
+				background-color: #ffffff;
+				padding: 7px 15px;
+				@include border_radius(20px);
+				border: 1px solid #ffffff;
+			}
+			&_button:hover{
+				background-color: transparent;
+				@extend %cl-white;
+			}
+		}
+	}
+	&__control{
 		width: 100%;
-		height: auto;
+		position: absolute;
+		bottom: 0;
+		text-align: center;
+		p{
+			@extend %cl-white;
+			opacity: 0.8;
+		}
+	}
+}
+
+/*===============SERVICES===============*/
+.services{
+	padding: 50px 0 40px;
+	width: 100%; 
+	display: block;
+	text-align: center;
+	@extend %bgcl;
+	.container{
+		width: 80%;
+		margin: 0 auto;
+		padding: 20px 0;
+	}
+	&__item{
+		width: percentage(1/4);
+		padding: 20px 10px;
+		float: left;
+		display: block;
+		&_photo{
+			width: 90px;
+			height: 90px;
+			object-fit: contain;
+		}
+		&_title{
+			@extend %gradient;
+			font-size: 1.7em;
+			font-weight: bold;
+			@include text_trans;
+		}
+		&_desc{
+			@extend %cl-grey;
+			line-height: 200%;
+			font-size: 13px;
+		}
+	}
+	&__control{
+		width: 100%;
+		display: block;
+		text-align: center;
+		a{
+			@extend %cl-white;
+			padding: 7px 20px;
+			background-color: #4964a9;
+			@include border_radius(20px);
+			font-size: 14px;
+		}
+	}
+}
+
+/*===============PRODUCT===============*/
+.product{
+	position: relative;
+	width: 100%;
+	display: block;
+	padding: 40px 0;
+	&__left{
+		float: left;
+		width: 60%;
+		padding-left: 200px;
+		&_title{
+			@extend %gradient;
+			font-size: 2em;
+			@include text_trans;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+		&_desc{
+			font-size: 13px;
+			line-height: 200%;
+		}
+		&_fea{
+			@include column_gap(2,10px);
+			&_item{
+				span{
+					margin-right: 10px;
+					padding: 5px 10px;
+					border: 1px solid #cccccc;
+					@include border_radius(50%);
+					float: left;
+				}
+				p{
+					
+					font-size: 12px;
+					line-height: 200%;
+				}
+			}
+		}
+	}
+	&__right{
+		float: right;
+		width: 40%;
+		@include img_res;
+	}
+}
+
+/*===============INTRO===============*/
+.intro{
+	position: relative;
+	display: block;
+	width: 100%;
+	@extend %bgcl;
+	&__video{
+		width:50%;
+		float: left;
+		position: relative;
+		@include img_res;
+		img{
+			display: block;
+		}
+		button{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			border: 1px solid #cccccc;
+			@include border_radius(50%);
+			color: #cccccc;
+			padding: 5px 10px;
+			background-color: transparent;
+		}
+	}
+	&__desc{
+		width:50%;
+		float: right;
+		padding: 99px 50px;
+		&_title{
+			@extend %gradient;
+			@include text_trans;
+			font-size: 2em;
+			font-weight: bold;
+		}
+		&_desc{
+			font-size: 14px;
+			line-height:200%;
+			margin-bottom: 50px;
+		}
+		a{
+			@extend %cl-white;
+			padding: 7px 20px;
+			background-color: #4964a9;
+			@include border_radius(20px);
+			font-size: 14px;
+		}
+	}
+}
+
+/*===============SIGNUP===============*/
+.signup{
+	position: relative;
+	width: 100%;
+	display: block;
+	.row{
+		@extend %gradient;
+		@include img_res;
+		img{
+			display: block;
+			opacity: 0.3;
+		}
+	}
+	form{
+		position: absolute;
+		width: 100%;
+		text-align: center;
+		top: 30%;
+		p{
+			@extend %cl-white;
+			font-size: 2em;
+			font-weight: bold;
+		}
+		input{
+			@include border_radius(20px);
+			border: 1px solid transparent;
+		}
+		::placeholder{
+			color: #ffffff;
+		}
+		input[type="text"]{
+			padding: 7px 15px;
+			background: rgba(255, 255, 255, 0.1);
+			border: 1px solid rgba(255, 255, 255, 0.3);
+		}
+		input[type="submit"]{
+			padding: 7px 30px;
+			background-color: #ffffff;
+			color: #d32721;
+			margin-left: -50px;
+		}
+	}
+}
+
+/*===============MAP===============*/
+.map{
+	position: relative;
+	width: 100%;
+	display: block;
+	@include img_res;
+	img{
 		display: block;
 	}
 }
 
-/*=======FOOTER===========*/
+/*===============FOOTER===============*/
 footer{
-	padding: 40px 0;
-	text-align: center;
-	@extend %cl-grey;
-	span{
-		font-weight: bold;
-		color: blue;
+	position: relative;
+	width: 100%;
+	display: block;
+	padding: 50px 0;
+	p{
+		width: 50%;
+		margin: 0 auto;
+		text-align: center;
+		@extend %cl-grey;
+		font-size: 13px;
+		line-height: 200%;
 	}
-}
-
-/*=======RWD===========*/
-$res_320: "only screen and (min-width: 320px) and (max-width: 374px)";
-$res_375: "only screen and (min-width: 375px) and (max-width: 424px)";
-$res_425: "only screen and (min-width: 425px) and (max-width: 767px)";
-$res_768: "only screen and (min-width: 768px) and (max-width: 991px)";
-$res_992: "only screen and (min-width: 992px) and (max-width: 1023px)";
-$res_1024: "only screen and (min-width: 1024px) and (max-width: 1199px)";
-$res_1200: "only screen and (min-width: 1200px)";
-
-@mixin responsive_320(){
-	@media #{$res_320} {
-		@content;
-	}
-}
-
-@mixin responsive_375(){
-	@media #{$res_375} {
-		@content;
-	}
-}
-
-@mixin responsive_425(){
-	@media #{$res_425} {
-		@content;
-	}
-}
-
-@mixin responsive_768(){
-	@media #{$res_768} {
-		@content;
-	}
-}
-
-@mixin responsive_1024(){
-	@media #{$res_1024} {
-		@content;
-	}
-}
-
-@mixin responsive_1200(){
-	@media #{$res_1200} {
-		@content;
-	}
-}
-
-@include responsive_320{
-	header{
-		.top{
-			padding: 10px 0;
-			.logo{
-				font-size: 1em;
-			}
-			nav{
-				ul{
-					display: none;
-				}
-			}
-		}
-		.banner{
-			.items{
-				&__info{
-					position: absolute;
-					width: 80%;
-					top: 10%;
-					right: 10%;
-					left: 10%;
-					&_heading{
-						font-size: 1em;
-						margin: 10px 0;
-					}
-					&_desc{
-						font-size: 7px;
-						margin-bottom: 10px;
-						padding: 0;
-					}
-					a{
-						font-size: 7px;
-					}
-				}
-			}
-			.control{
-				display: none;
-			}
-		}
-	}
-	/*=======SERVICES===========*/
-	.services{
-		padding: 20px 0;
-		&__item{
-			width: 100%;
-			padding: 20px 0px;
-			text-align: center;
-			img{
-				min-width: 100px;
-				height: auto;
-				object-fit: cover;
-			}
-		}
-	}
-	/*=======PRODUCT===========*/
-	.products{
-		padding: 20px 0;
-		&__info{
-			width: 100%;
-			padding: 10px;
-			p{
-				line-height: 200%;
-			}
-			&_list{
-				&_left{
-					width: 100%;
-					padding: 10px;
-				}
-				&_right{
-					width: 100%;
-				}
-			}
-		}
-		&__photo{
-			width: 100%;
-			img{
-				width: 100%;
-				height: auto;
-			}
-		}
-	}
-
-	.infos{
-		&__left{
-			position: relative;
-			width: 100%;
-			float: left;
-			img{
-				width: 100%;
-				height: auto;
-				display: block;
-			}
-			&_intro{
-				padding: 10px;
-				p{
-					font-size: 12px;
-					line-height: 200%;
-				}
-			}
-		}
-		&__right{
-			width: 100%;
-			float: right;
-			&_intro{
-				padding: 10px;
-				p{
-					font-size: 12px;
-					line-height: 200%;
-				}
-			}
-		}
-	}
-}
-	.signup{
-		.content{
-			form{
-				top: 1%;
-				left: 10%;
-				right: 10%;
-				p{
-					font-size: 0.7em;
-				}
-				input{
-					padding: 7px 15px;
-					font-size: 10px;
-				}
-			}
-		}
-	}	
-
-	footer{
-		padding: 10px 0;
-		font-size: 0.7em;
-		span{
-			font-weight: bold;
-			color: blue;
-		}
-	}
-}
-
-@include responsive_375{
-
 }
